--- a/RestaurantManager.UniversalWindows/ExpeditePage.xaml
+++ b/RestaurantManager.UniversalWindows/ExpeditePage.xaml
@@ -1,56 +1,31 @@
 ﻿<Page
-    x:Class="RestaurantManager.UniversalWindows.ExpeditePage"
+    x:Class="RestaurantManager.UniversalWindows.OrderPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:RestaurantManager.UniversalWindows"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
-
+   
+  
+    
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
-            <RowDefinition Height=".2*"/>
-            <RowDefinition Height=".1*"/>
-            <RowDefinition Height=".5*"/>
-            <RowDefinition Height=".1*"/>
-            <RowDefinition Height=".1*"/>
-                        
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="100"/>
         </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width=".5*" />
-            <ColumnDefinition Width=".25*" />
-            <ColumnDefinition Width=".25*" />
-        </Grid.ColumnDefinitions>
         
-        <TextBlock Text="Special Requests:"
-                   Grid.Column="1"
-                   Grid.Row="1"                   
-                   />
-        <TextBlock Text="Order Items:"
-                   Grid.Column="2"
+        <Button Content="Clear All Orders"
                    Grid.Row="1"
-                   
-                   />
-        <TextBlock Text="**Add to Order**" 
-                   Grid.Column="0"
-                   Grid.Row="4"
                    HorizontalAlignment="Center"
                    VerticalAlignment="Center"
-                   />
-        
-        <TextBlock Text="**Submit" 
-                   
-                   Grid.Row="4"
-                   Grid.Column="1"
-                   HorizontalAlignment="Right"
-                   VerticalAlignment="Center"
-         />
-        <TextBlock Text=" Order**"
-                   Grid.Row="4"
-                   Grid.Column="2"
-                   HorizontalAlignment="Left"
-                   VerticalAlignment="Center"
-                   />
+                   Tapped="TextBlock_Tapped"
+    
+                />
 
+        <AppBar>
+            <AppBarButton Icon="Home" Name="appBarHome" Click="appBarHome_Click" />
+        </AppBar>
     </Grid>
+    
 </Page>
