--- a/RestaurantManager.UniversalWindows/OrderPage.xaml
+++ b/RestaurantManager.UniversalWindows/OrderPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="RestaurantManager.UniversalWindows.OrderPage"
+    x:Class="RestaurantManager.UniversalWindows.ExpeditePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:RestaurantManager.UniversalWindows"
@@ -9,14 +9,54 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
-            <RowDefinition Height="1*"/>
-            <RowDefinition Height="100"/>
+            <RowDefinition Height=".2*"/>
+            <RowDefinition Height=".1*"/>
+            <RowDefinition Height=".5*"/>
+            <RowDefinition Height=".1*"/>
+            <RowDefinition Height=".1*"/>
+                        
         </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width=".5*" />
+            <ColumnDefinition Width=".25*" />
+            <ColumnDefinition Width=".25*" />
+        </Grid.ColumnDefinitions>
         
-        <TextBlock Text="**Clear All Orders**"
-                   Grid.Row="1"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center"
+        <TextBlock Text="Special Requests:"
+                   Grid.Column="1"
+                   Grid.Row="1"                   
                    />
+        <TextBlock Text="Order Items:"
+                   Grid.Column="2"
+                   Grid.Row="1"
+                   
+                   />
+
+        <ListView Grid.ColumnSpan="1" Grid.Row="1" Grid.RowSpan="2" Background="LightGreen">
+            
+        </ListView>
+        <ListView Grid.Column="2" Grid.Row="2" Background="SkyBlue">
+                       
+        </ListView>
+        <Button Content="Add to Order" 
+                   Grid.Column="0"
+                   Grid.Row="4"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Center" 
+                    DoubleTapped="TextBlock_DoubleTapped"
+                   />
+
+        <Button Content="Submit Order" 
+                   
+                   Grid.Row="4"
+                   Grid.Column="1"
+                   HorizontalAlignment="Right"
+                   VerticalAlignment="Center"
+         />
+
+        <AppBar Grid.ColumnSpan="3" Grid.Column="0">
+            <AppBarButton Icon="Home" Name="appBarHome" Click="appBarHome_Click" />
+        </AppBar>
+        
     </Grid>
 </Page>
